--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
+
 .main {
   display: flex;
   flex-direction: column;
@@ -97,7 +99,7 @@
 
 .center::before,
 .center::after {
-  content: '';
+  content: "";
   left: 50%;
   position: absolute;
   filter: blur(45px);
@@ -226,4 +228,63 @@
   to {
     transform: rotate(0deg);
   }
+}
+
+.post-it {
+  width: 250px;
+  min-height: 240px;
+  position: relative;
+  background: #ffa;
+  overflow: hidden;
+  margin: 30px auto;
+  padding: 20px;
+  border-radius: 0 0 0 30px/45px;
+  box-shadow: inset 0 -40px 40px rgba(0, 0, 0, 0.2),
+    inset 0 25px 10px rgba(0, 0, 0, 0.2), 0 5px 6px 5px rgba(0, 0, 0, 0.2);
+  font-family: "Permanent Marker", cursive;
+  line-height: 1.7em;
+  font-size: 19px;
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+
+  color: #130d6b;
+}
+
+.post-it li {
+  cursor: pointer;
+}
+
+.post-it:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 20px;
+  min-height: 25px;
+  background: #ffa;
+  box-shadow: 3px -2px 10px rgba(0, 0, 0, 0.2),
+    inset 15px -15px 15px rgba(0, 0, 0, 0.3);
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  transform: skewX(25deg);
+}
+
+.post-it:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 75%;
+  min-height: 20px;
+  border-top: 3px solid #130d6b;
+  border-radius: 50%;
+  bottom: 0px;
+  left: 10%;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.note-title {
+  font-size: 25px;
+  position: relative;
 }
