--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -245,7 +245,7 @@
   line-height: 1.7em;
   font-size: 19px;
   -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
-
+  height: fit-content;
   color: #130d6b;
 }
 
